force-app/main/default/objects/Node__c/Node__c.object-meta.xml
<CustomObject>
    <label>Node</label>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>Node Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>