force-app/main/default/objects/Node__c/fields/IsSalesforceRecord__c.field-meta.xml
<CustomField>
    <fullName>IsSalesforceRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Salesforce Record</label>
    <type>Checkbox</type>
</CustomField>