force-app/main/default/objects/Node__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>