force-app/main/default/objects/Node__c/fields/RelatedToAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>